--- a/GroupProject/.settings/org.eclipse.wst.common.component
+++ b/GroupProject/.settings/org.eclipse.wst.common.component
@@ -2,6 +2,7 @@
 <project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="GroupProject">
         <wb-resource deploy-path="/" source-path="/WebContent"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="context-root" value="GroupProject"/>
         <property name="java-output-path" value="/GroupProject/build/classes"/>
     </wb-module>
